--- a/services.html
+++ b/services.html
@@ -108,33 +108,33 @@
         </div>
         <div class="services-grid">
           <div class="services-grid-element">
-            <div class="icon"></div>
-            <div class="header">Custom Web Development</div>
+            <img src="images/services_icon1.svg">
+            <div class="element-header">Custom Web Development</div>
             <p>Our professional web development team can build high-performing, scalable custom web applications that match your business requirements and significantly increase customer engagement.</p>
           </div>
           <div class="services-grid-element">
-            <div class="icon"></div>
-            <div class="header">Web Support and Maintenance</div>
+            <img src="images/services_icon1.svg">
+            <div class="element-header">Web Support and Maintenance</div>
             <p>Our cooperation with you won't end once your web development project goes live. Web development services by COAX Software include maintenance and support to make sure your web solution is always up and running.</p>
           </div>
           <div class="services-grid-element">
-            <div class="icon"></div>
-            <div class="header">eCommerce Development</div>
+            <img src="images/services_icon1.svg">
+            <div class="element-header">eCommerce Development</div>
             <p>Deliver personalized shopping experiences to your customers by leveraging our eCommerce web development services for B2B, B2C, and C2C.</p>
           </div>
           <div class="services-grid-element">
-            <div class="icon"></div>
-            <div class="header">Third-Party Integrations</div>
+            <img src="images/services_icon1.svg">
+            <div class="element-header">Third-Party Integrations</div>
             <p>We'll help you enhance the capability of your web apps through integration with various third-party plugins serving BI, analytics, social media, and more.</p>
           </div>
           <div class="services-grid-element">
-            <div class="icon"></div>
-            <div class="header">Enterprise Web Development</div>
+            <img src="images/services_icon1.svg">
+            <div class="element-header">Enterprise Web Development</div>
             <p>Increase the operational efficiency of your enterprise by creating interactive, fluid, and easy-to-use custom enterprise-grade web applications.</p>
           </div>
           <div class="services-grid-element">
-            <div class="icon"></div>
-            <div class="header"></div>
+            <img src="images/services_icon1.svg">
+            <div class="element-header">Legacy App Upgrade</div>
             <p>We help you modernize and upgrade your legacy apps without disturbing your business processes using the right middleware components.</p>
           </div>
         </div>
@@ -156,59 +156,67 @@
         <div class="left-section">
           <div class="left-section-element">
             <div class="number">01</div>
-            <div class="header">DISCOVERY</div>
-            <p>Let's get to know each other. Allow us to understand your current and future business goals, visions, and objectives to help you reach your goals.</p>
-          </div>
+            <div class="right">
+              <div class="header">DISCOVERY</div>
+              <p>Let's get to know each other. Allow us to understand your current and future business goals, visions, and objectives to help you reach your goals.</p>
+            </div>
+            </div>
           <div class="left-section-element">
             <div class="number">02</div>
-            <div class="header">PROJECT DESIGN</div>
-            <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
+            <div class="right">
+              <div class="header">DESIGN</div>
+              <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
+            </div>
           </div>
           <div class="left-section-element">
             <div class="number">03</div>
-            <div class="header">CUSTOM DEVELOPMENT</div>
-            <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
+            <div class="right">
+              <div class="header">DEVELOPMENT</div>
+              <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
+            </div>
           </div>
         </div>
         <div class="right-section">
-          <div class="right-section-element">
-            <div class="header">DISCOVERY CALL</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline. 
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
+          <div class="block">
+            <div class="right-section-element">
+              <div class="header">DISCOVERY CALL</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline. 
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
+            <div class="right-section-element">
+              <div class="header">CONTRACT REVIEW</div>
+              <p>Once both parties approve and sign off on the scope of work, timeline, and budget proposal, we will send over a service agreement for you to review and e-sign. 
+                At this time, we will also sign NDAs for your project if we discussed them beforehand.
+              </p>
+            </div>
           </div>
-          <div class="right-section-element">
-            <div class="header">CONTRACT REVIEW</div>
-            <p>Once both parties approve and sign off on the scope of work, timeline, and budget proposal, we will send over a service agreement for you to review and e-sign. 
-              At this time, we will also sign NDAs for your project if we discussed them beforehand.
-            </p>
+          <div class="block">
+            <div class="right-section-element">
+              <div class="header">WIREFRAME & UI/UX DESIGN</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
+            <div class="right-section-element">
+              <div class="header">REVIEWS & REVISIONS</div>
+              <p>You will always be in control and we always appreciate your feedback. Follow the whole process with live links from Figma. We usually provide 3 collaborative revisions per page.
+                Once the design is complete and you are happy with everything, you will sign off on the final design. This finalized design then moves on to development.
+              </p>
+            </div>
           </div>
-          <div class="right-section-element">
-            <div class="header">WIREFRAME & UI/UX DESIGN</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
-          </div>
-          <div class="right-section-element">
-            <div class="header">REVIEWS & REVISIONS</div>
-            <p>You will always be in control and we always appreciate your feedback. Follow the whole process with live links from Figma. We usually provide 3 collaborative revisions per page.
-              Once the design is complete and you are happy with everything, you will sign off on the final design. This finalized design then moves on to development.
-            </p>
-          </div>
-          <div class="right-section-element">
-            <div class="header">PIXEL-PERFECT DEVELOPMENT</div>
-            <p>Our developers take the finalized high-fidelity designs to development. Every development is built to follow only the highest internet standards. Whether it is Webflow or custom development, every page will be structured for your ease-of-use in mind. 
-              You will be able to follow the whole development phase with demo links provided by your project manager.
-            </p>
-          </div>
-          <div class="right-section-element">
-            <div class="header">SEO OPTIMIZATIONS</div>
-            <p>We take care of on-page SEO for you. Every project we develop includes:
-              • On-Page SEO
-              • XML sitemap
-              • Robots.txt
-              • 301 Redirects
-            </p>
+          <div class="block">
+            <div class="right-section-element">
+              <div class="header">PIXEL-PERFECT DEVELOPMENT</div>
+              <p>Our developers take the finalized high-fidelity designs to development. Every development is built to follow only the highest internet standards. Whether it is Webflow or custom development, every page will be structured for your ease-of-use in mind. 
+                You will be able to follow the whole development phase with demo links provided by your project manager.
+              </p>
+            </div>
+            <div class="right-section-element">
+              <div class="header">SEO OPTIMIZATIONS</div>
+              <p>We take care of on-page SEO for you. Every project we develop includes: Our developers take the finalized high-fidelity designs to development. Every development is built to follow only the highest internet standards. Whether it is Webflow or custom development, every page will be structured for your ease-of-use in mind. 
+              </p>
+            </div>
           </div>
         </div>
       </div>
