Mobile responsiveness for multiple pages

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
-    <link rel="stylesheet" href="/css/local.css" />
     <link rel="stylesheet" href="/css/about.css" />
 
     <title>Rain City Websites</title>
@@ -27,7 +26,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY</a>
+            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <ul>
@@ -108,18 +107,22 @@
           <div class="about-header">WHO WE ARE</div>
         </div>
         <div class="right-section">
-          <p>
-            We don't just create web design for the internet, we create meaningful digital experiences for users that go above and beyond through data-driven UI/UX practices. Our design scales and converts.
-          </p>
-          <p>
-            As the only constant is change, traditional web design is outdated. While it may still  "work," it is difficult to deliver satisfactory results in an already extremely competitive market. Proactive, strategy-driven user experiences is the new standard to engage with the target audience.
-          </p>
-          <p>
-            Our design team at Vyntex has extensive and up-to-date knowledge in UI (user interface), UX (user experience), CX (customer experience), graphic design, animations, and more. As a website is a business's best marketing tool, we delivery exceptional user experience that sells.
-          </p>
-          <p>
-            Our team will always over deliver to ensure that your business has the tools necessary to succeed. Bring your ideas and products to life with our talented design team.
-          </p>
+          <div class="left-side">
+              <p>
+              We don't just create web design for the internet, we create meaningful digital experiences for users that go above and beyond through data-driven UI/UX practices. Our design scales and converts.
+            </p>
+            <p>
+              As the only constant is change, traditional web design is outdated. While it may still  "work," it is difficult to deliver satisfactory results in an already extremely competitive market. Proactive, strategy-driven user experiences is the new standard to engage with the target audience.
+            </p>
+          </div>
+          <div class="right-side">
+            <p>
+              Our design team at Vyntex has extensive and up-to-date knowledge in UI (user interface), UX (user experience), CX (customer experience), graphic design, animations, and more. As a website is a business's best marketing tool, we delivery exceptional user experience that sells.
+            </p>
+            <p>
+              Our team will always over deliver to ensure that your business has the tools necessary to succeed. Bring your ideas and products to life with our talented design team.
+            </p>
+          </div>
         </div>
       </div>
 
@@ -221,11 +224,11 @@
           <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
           
           <div class="footer-menu">
-            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
-            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
-            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
-            <div class="footer-menu-link"><a href="#">BLOG</a></div>
-            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+            <div class="footer-menu-link"><a href="about.html">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="services.html">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="blog.html">BLOG</a></div>
+            <div class="footer-menu-link"><a href="contact.html">CONTACT</a></div>
           </div>
           <label>Join Our Newsletter!</label>
           <input
