--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY</a>
+            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <ul>
@@ -107,67 +107,87 @@
           <div class="header">CATEGORIES</div>
           <div class="categories">
             <div class="category-element">
-              <img src=""/>
-              <div class="header">News</div>
+              <img src="images/blog_news.svg"/>
+              <div class="category-header">News</div>
             </div>
             <div class="category-element">
-              <img src=""/>
-              <div class="header">Project Management</div>
+              <img src="images/blog_pm.svg"/>
+              <div class="category-header">Project Management</div>
             </div>
             <div class="category-element">
-              <img src=""/>
-              <div class="header">Design</div>
+              <img src="images/blog_design.svg"/>
+              <div class="category-header">Design</div>
             </div>
             <div class="category-element">
-              <img src=""/>
-              <div class="header">Development</div>
+              <img src="images/blog_development.svg"/>
+              <div class="category-header">Development</div>
             </div>
             <div class="category-element">
-              <img src=""/>
-              <div class="header">All</div>
+              <img src="images/blog_all.svg"/>
+              <div class="category-header">All</div>
             </div>
           </div>
         </div>
         <div class="right-section">
           <div class="blog-page-element">
-            <div class="icon"><img src=""/></div>
-            <div class="sub-header">11.22.2022  Bryan Moore</div>
-            <div class="header">Advantages of Developing your own Website</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
+            <div class="left">
+              <div class="icon"><img src="images/blog_development.svg"/></div>
+            </div>
+            <div class="right">
+              <div class="sub-header">11.22.2022  Bryan Moore</div>
+              <div class="header">Advantages of Developing your own Website</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
           </div>
           <div class="blog-page-element">
-            <div class="icon"></div>
-            <div class="sub-header">11.22.2022  Bryan Moore</div>
-            <div class="header">Optimizing Images for the Web</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
+            <div class="left">
+              <div class="icon"><img src="images/blog_design.svg"/></div>
+            </div>
+            <div class="right">
+              <div class="sub-header">11.22.2022  Bryan Moore</div>
+              <div class="header">Optimizing Images for the Web</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
           </div>
           <div class="blog-page-element">
-            <div class="icon"></div>
-            <div class="sub-header">11.22.2022  Bryan Moore</div>
-            <div class="header">How to Drive Traffic to your Website</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
+            <div class="left">
+              <div class="icon"><img src="images/blog_pm.svg"/></div>
+            </div>
+            <div class="right">
+              <div class="sub-header">11.22.2022  Bryan Moore</div>
+              <div class="header">How to Drive Traffic to your Website</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
           </div>
           <div class="blog-page-element">
-            <div class="icon"></div>
-            <div class="sub-header">11.22.2022  Bryan Moore</div>
-            <div class="header">Benefits of a Professional Business Website</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
+            <div class="left">
+              <div class="icon"><img src="images/blog_pm.svg"/></div>
+            </div>
+            <div class="right">
+              <div class="sub-header">11.22.2022  Bryan Moore</div>
+              <div class="header">Benefits of a Professional Business Website</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
           </div>
           <div class="blog-page-element">
-            <div class="icon"></div>
-            <div class="sub-header">11.22.2022  Bryan Moore</div>
-            <div class="header">SEO Strategies for Today and Tomorrow</div>
-            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
-              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
-            </p>
+            <div class="left">
+              <div class="icon"><img src="images/blog_development.svg"/></div>
+            </div>
+            <div class="right">
+              <div class="sub-header">11.22.2022  Bryan Moore</div>
+              <div class="header">SEO Strategies for Today and Tomorrow</div>
+              <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+                During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -206,11 +226,11 @@
           <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
           
           <div class="footer-menu">
-            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
-            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
-            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
-            <div class="footer-menu-link"><a href="#">BLOG</a></div>
-            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+            <div class="footer-menu-link"><a href="about.html">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="services.html">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="blog.html">BLOG</a></div>
+            <div class="footer-menu-link"><a href="contact.html">CONTACT</a></div>
           </div>
           <label>Join Our Newsletter!</label>
           <input
