--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
-    <link rel="stylesheet" href="/css/local.css" />
+    <link rel="stylesheet" href="/css/contact.css" />
 
     <title>Rain City Websites</title>
   </head>
@@ -26,7 +26,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY</a>
+            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <ul>
@@ -46,32 +46,20 @@
     </header>
 
     <!-- ============================================ -->
-    <!--                   LANDING                    -->
+    <!--                   CONTACT                    -->
     <!-- ============================================ -->
 
-    <section id="hero"></section>
+    <section id="hero">
 
-    <!-- ============================================ -->
-    <!--                   SERVICES                   -->
-    <!-- ============================================ -->
+    </section>
 
-    <section id="services" class="section"></section>
 
-    <!-- ============================================ -->
-    <!--                   PORTFOLIO                  -->
-    <!-- ============================================ -->
-
-    <!-- ============================================ -->
-    <!--                   PRICING                    -->
-    <!-- ============================================ -->
-
-    <!-- ============================================ -->
-    <!--                   BLOG                       -->
-    <!-- ============================================ -->
-
-    <!-- ============================================ -->
-    <!--                   FOOTER                     -->
-    <!-- ============================================ -->
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">What We Do</div>
+        <div class="right-section">OUR WORK</div>
+      </div>
+    </div>
 
     <footer id="footer"></footer>
     <div class="socials">
