--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="navbar">
           <div class="navbar-navigation">
             <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
-            <a href="index.html">RAIN CITY</a> 
+            <a href="index.html"><span id="blue">RAIN </span> CITY</a> 
           </div>
           <div class="navbar-menu">
             <ul>
@@ -484,11 +484,11 @@
           <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
           
           <div class="footer-menu">
-            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
-            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
-            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
-            <div class="footer-menu-link"><a href="#">BLOG</a></div>
-            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+            <div class="footer-menu-link"><a href="about.html">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="services.html">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="blog.html">BLOG</a></div>
+            <div class="footer-menu-link"><a href="contact.html">CONTACT</a></div>
           </div>
           <label>Join Our Newsletter!</label>
           <input
