Added some animations

--- a/contact.html
+++ b/contact.html
@@ -50,20 +50,123 @@
     <!-- ============================================ -->
 
     <section id="hero">
-
+      <div class="container">
+        <div class="left-section">
+          <div class="header">
+            QUESTIONS? WE’RE HERE TO HELP
+          </div>
+          <p>
+            We pride ourselves in being fully transparent. We are clear on every step we take, and you will always be involved in all business decisions.
+          </p>
+          <img src="images/Full Inbox _Isometric.svg"/>
+        </div>
+        <div class="right-section">
+          <div class="container">
+            <div class="header">
+              How Can We Help?
+            </div>
+            <p>
+              Describe your request and tell us about your project idea
+            </p>
+            <form action="/action_page.php">
+              <textarea rows="5" cols="33" placeholder="Feel free to share anything about the project or idea."></textarea>
+              <p>
+                Contact Details
+              </p>
+              <label for="fname">First name:</label>
+              <input type="text" id="fname" name="fname" value="John">
+              <label for="lname">Last name:</label>
+              <input type="text" id="lname" name="lname" value="Doe">
+              <label for="email">Enter your email:</label>
+              <input type="email" id="email" name="email">
+              <input type="submit">
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
 
 
-    <div id="section-title">
+    <section id="section-title">
       <div class="container">
-        <div class="left-section">What We Do</div>
-        <div class="right-section">OUR WORK</div>
+        <div class="left-section">Get In Touch</div>
+        <div class="right-section">CONTACT</div>
       </div>
-    </div>
+    </section>
+    
+    <footer id="footer">
+      <div class="container">
+        <div class="left-section">
+          <div class="header">RAIN CITY WEBSITES</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
+          
+          <div class="footer-menu">
+            <div class="footer-menu-link"><a href="about.html">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="services.html">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="blog.html">BLOG</a></div>
+            <div class="footer-menu-link"><a href="contact.html">CONTACT</a></div>
+          </div>
+          <label>Join Our Newsletter!</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="right-section">
+          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-services">
+            <div class="footer-services-section">
+              <div class="services-section-header">DESIGN</div>
+              <div class="services-section-label">Branding</div>
+              <div class="services-section-label">UI/UX Design</div>
+              <div class="services-section-label">Custom Themes</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">DEVELOP</div>
+              <div class="services-section-label">Web Development</div>
+              <div class="services-section-label">No-Code Development</div>
+              <div class="services-section-label">Content Creation</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">GROW</div>
+              <div class="services-section-label">SEO Research</div>
+              <div class="services-section-label">Site Maintenance</div>
+              <div class="services-section-label">Consistent Updates</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
-    <footer id="footer"></footer>
+    <div id="mouse-circle"></div>
+
     <div class="socials">
-      <div class="container">SOCIALS</div>
+      <div class="container">
+        <div class="socials-left">
+          RAIN CITY LLC
+        </div>
+        <div class="socials-middle">
+          <a href="about.html"><img src="images/reddit.svg"></a>
+          <a href="about.html"><img src="images/linkedin.svg"></a>
+          <a href="about.html"><img src="images/Twitter.svg"></a>
+          <a href="about.html"><img src="images/instagram.svg"></a>
+          <a href="about.html"><img src="images/facebook.svg"></a>
+        </div>
+        <div class="socials-right">
+          <a href="about.html">TERMS</a>
+          <a href="about.html">PRIVACY</a>
+          <a href="about.html">COOKIES</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
