--- a/services.html
+++ b/services.html
@@ -154,11 +154,11 @@
     <div id="process" class="section">
       <div class="container">
         <div class="left-section">
-          <div class="left-section-element">
+          <div class="left-section-element-first">
             <div class="number">01</div>
             <div class="right">
               <div class="header">DISCOVERY</div>
-              <p>Let's get to know each other. Allow us to understand your current and future business goals, visions, and objectives to help you reach your goals.</p>
+              <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
             </div>
           </div>
           <div class="left-section-element">
@@ -168,7 +168,7 @@
               <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
             </div>
           </div>
-          <div class="left-section-element">
+          <div class="left-section-element-last">
             <div class="number">03</div>
             <div class="right">
               <div class="header">DEVELOPMENT</div>
